Implementing API security configuration with JWT (JAva Web Token)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.flyway.password=qwe123
 spring.flyway.schemas=hut_database
 spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
+#jwt(java web token) configuration
+app.jwt.secret=ArbitrarySecretKey
+#1 day token expiration
+app.jwt.expiration-in-ms=86400000
+app.jwt.token.prefix=Bearer
+app.jwt.header.string=Authorization
