--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #your user name
 spring.datasource.username=root
-#your pasword
-spring.datasource.password=qwe123
+#your password
+spring.datasource.password=piupiudapia
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -14,7 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Flyway config
 spring.flyway.user=root
-spring.flyway.password=qwe123
+spring.flyway.password=piupiudapia
 spring.flyway.schemas=hut_database
 spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
