Implementing sending email functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,16 @@ app.jwt.secret=ArbitrarySecretKey
 app.jwt.expiration-in-ms=86400000
 app.jwt.token.prefix=Bearer
 app.jwt.header.string=Authorization
+
+
+#Email Config using test email
+spring.mail.host=smtp.gmail.com
+spring.mail.username=laisfdr2@gmail.com
+spring.mail.password=L@is123!
+send.from.email= laisfdr2@gmail.com
+spring.mail.port=587
+
+spring.mail.properties.mail.transport.protocol=smtps
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=false
