Database config refactoring to heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 #DataBase configuration
 #spring.jpa.database=MYSQL
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+#spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #your user name
-spring.datasource.username=root
+#spring.datasource.username=root
 #your password
-spring.datasource.password=piupiudapia
+#spring.datasource.password=test
+
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -13,10 +15,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.hibernate.ddl-auto=update
 
 #Flyway config
-spring.flyway.user=root
-spring.flyway.password=piupiudapia
+#spring.flyway.user=root
+#spring.flyway.password=test
 spring.flyway.schemas=hut_database
-spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.flyway.url=${JDBC_DATASOURCE_URL}
+#spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 #jwt(java web token) configuration
 app.jwt.secret=ArbitrarySecretKey
