--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 #DataBase configuration
 #spring.jpa.database=MYSQL
 
-spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.datasource.url={JDBC_DATABASE_URL}
 #spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #your user name
 #spring.datasource.username=root
+spring.datasource.username={JDBC_DATABASE_USERNAME}
 #your password
 #spring.datasource.password=test
+spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #create tables auto
 #spring.jpa.hibernate.ddl-auto=update
@@ -17,8 +19,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #Flyway config
 #spring.flyway.user=root
 #spring.flyway.password=test
+spring.flyway.user={JDBC_DATABASE_USERNAME}
+spring.flyway.password={JDBC_DATABASE_PASSWORD}
 spring.flyway.schemas=hut_database
-spring.flyway.url=${JDBC_DATASOURCE_URL}
+spring.flyway.url={JDBC_DATABASE_URL}
 #spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 #jwt(java web token) configuration
