fix heroku deploy, flyway issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.jpa.show-sql=true
 #Flyway config
 #spring.flyway.user=root
 #spring.flyway.password=test
-spring.flyway.user={JDBC_DATABASE_USERNAME}
-spring.flyway.password={JDBC_DATABASE_PASSWORD}
-spring.flyway.schemas=hut_database
-spring.flyway.url={JDBC_DATABASE_URL}
+#spring.flyway.user={JDBC_DATABASE_USERNAME}
+#spring.flyway.password={JDBC_DATABASE_PASSWORD}
+#spring.flyway.schemas=hut_database
+#spring.flyway.url={JDBC_DATABASE_URL}
 #spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 #jwt(java web token) configuration
