--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 #DataBase configuration
 #spring.jpa.database=MYSQL
 
+#PROD
 spring.datasource.url={JDBC_DATABASE_URL}
-#spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-#your user name
-#spring.datasource.username=root
 spring.datasource.username={JDBC_DATABASE_USERNAME}
-#your password
-#spring.datasource.password=test
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
+spring.datasource.hikari.maximum-pool-size=10
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=piupiudapia
+
 
 spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -18,11 +20,8 @@ spring.jpa.show-sql=true
 
 #Flyway config
 #spring.flyway.user=root
-#spring.flyway.password=test
-#spring.flyway.user={JDBC_DATABASE_USERNAME}
-#spring.flyway.password={JDBC_DATABASE_PASSWORD}
+#spring.flyway.password=piupiudapia
 #spring.flyway.schemas=hut_database
-#spring.flyway.url={JDBC_DATABASE_URL}
 #spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 #jwt(java web token) configuration
