--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@
 spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
-# Number of ms to wait before throwing an exception if no connection is available.
-spring.datasource.tomcat.max-wait=10000
-#Maximum number of active connections that can be allocated from this pool at the same time.\
-spring.datasource.tomcat.max-active=10
+
+spring.datasource.hikari.maximum-pool-size=8
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=root
