Fixing Spring security HTTP requests.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 #DataBase configuration
-#spring.jpa.database=MYSQL
 
 #PROD
 spring.datasource.url={JDBC_DATABASE_URL}
@@ -11,18 +10,14 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 
+#DEV
 #spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=piupiudapia
-
-
 spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-#create tables auto
-#spring.jpa.hibernate.ddl-auto=update
-
-#Flyway config
+#Flyway config, comment to RUN IN PROD
 #spring.flyway.user=root
 #spring.flyway.password=piupiudapia
 #spring.flyway.schemas=hut_database
