--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,8 @@ app.jwt.header.string=Authorization
 #Email Config using test email
 spring.mail.host=smtp.gmail.com
 spring.mail.username=laisfdr2@gmail.com
-spring.mail.password=L@is123!
-send.from.email= laisfdr2@gmail.com
+spring.mail.password=fake
+send.from.email= fake@email
 spring.mail.port=587
 
 spring.mail.properties.mail.transport.protocol=smtps
