--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.hikari.maxLifetime=1800000
 #spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=piupiudapia
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Flyway config, comment to RUN IN PROD
@@ -34,8 +34,8 @@ app.jwt.header.string=Authorization
 #Email Config using test email
 spring.mail.host=smtp.gmail.com
 spring.mail.username=laisfdr2@gmail.com
-spring.mail.password=fake
-send.from.email= fake@email
+spring.mail.password=L@is123!
+send.from.email= laisfdr2@gmail.com
 spring.mail.port=587
 
 spring.mail.properties.mail.transport.protocol=smtps
