--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,13 +13,13 @@ spring.datasource.hikari.maxLifetime=1800000
 #DEV
 #spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=piupiudapia
+#spring.datasource.password=
 spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Flyway config, comment to RUN IN PROD
 #spring.flyway.user=root
-#spring.flyway.password=piupiudapia
+#spring.flyway.password=
 #spring.flyway.schemas=hut_database
 #spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
