--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ app.jwt.header.string=Authorization
 
 #Email Config using test email
 spring.mail.host=smtp.gmail.com
-spring.mail.username=laisfdr2@gmail.com
+spring.mail.username=fake@email
 spring.mail.password=fake
 send.from.email= fake@email
 spring.mail.port=587
