--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,34 @@
 #DataBase configuration
 
 #PROD
-spring.datasource.url={JDBC_DATABASE_URL}
-spring.datasource.username={JDBC_DATABASE_USERNAME}
-spring.datasource.password={JDBC_DATABASE_PASSWORD}
+#spring.datasource.url={JDBC_DATABASE_URL}
+#spring.datasource.username={JDBC_DATABASE_USERNAME}
+#spring.datasource.password={JDBC_DATABASE_PASSWORD}
+#
+#spring.datasource.hikari.maximum-pool-size=8
+#spring.datasource.hikari.connectionTimeout=30000
+#spring.datasource.hikari.idleTimeout=600000
+#spring.datasource.hikari.maxLifetime=1800000
 
-spring.datasource.hikari.maximum-pool-size=8
-spring.datasource.hikari.connectionTimeout=30000
-spring.datasource.hikari.idleTimeout=600000
-spring.datasource.hikari.maxLifetime=1800000
+#DEV-docker
+spring.datasource.url=jdbc:mysql://hutdb/hut_database
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.platform=mysql
+spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
 
 #DEV
 #spring.datasource.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=piupiudapia
+#spring.datasource.password=pwd
 #spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Flyway config, comment to RUN IN PROD
 #spring.flyway.user=root
-#spring.flyway.password=piupiudapia
+#spring.flyway.password=root
+#spring.flyway.url=jdbc:mysql://hutdb
 #spring.flyway.schemas=hut_database
 #spring.flyway.url=jdbc:mysql://localhost:3306/hut_database?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
